generated/ArcanumParser.py
# Generated from Arcanum.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class ArcanumParser ( Parser ):

    grammarFileName = "Arcanum.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'['", "']'", "','", "'('", 
                     "')'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", 
                     "'*'", "'/'", "'+'", "'-'", "'invocar'", "'recolectar'", 
                     "'purificar'", "'forjar'", "'artefacto'", "'desde'", 
                     "'de'", "'donde'", "'con'", "'eje_x'", "'eje_y'", "'titulo'", 
                     "'y'", "'o'", "'no'", "'verdadero'", "'falso'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INVOCAR", "RECOLECTAR", 
                      "PURIFICAR", "FORJAR", "ARTEFACTO", "DESDE", "DE", 
                      "DONDE", "CON", "EJE_X", "EJE_Y", "TITULO", "Y", "O", 
                      "NO", "VERDADERO", "FALSO", "ID", "NUMERO", "CADENA", 
                      "COMENTARIO", "ESPACIO" ]

    RULE_programa = 0
    RULE_hechizo = 1
    RULE_asignacion = 2
    RULE_expresion = 3
    RULE_invocarExpr = 4
    RULE_recolectarExpr = 5
    RULE_purificarExpr = 6
    RULE_listaIds = 7
    RULE_instruccionForjar = 8
    RULE_listaParametros = 9
    RULE_parametro = 10
    RULE_condicion = 11
    RULE_comparacion = 12
    RULE_operadorComparacion = 13
    RULE_expresionAritmetica = 14

    ruleNames =  [ "programa", "hechizo", "asignacion", "expresion", "invocarExpr", 
                   "recolectarExpr", "purificarExpr", "listaIds", "instruccionForjar", 
                   "listaParametros", "parametro", "condicion", "comparacion", 
                   "operadorComparacion", "expresionAritmetica" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    INVOCAR=18
    RECOLECTAR=19
    PURIFICAR=20
    FORJAR=21
    ARTEFACTO=22
    DESDE=23
    DE=24
    DONDE=25
    CON=26
    EJE_X=27
    EJE_Y=28
    TITULO=29
    Y=30
    O=31
    NO=32
    VERDADERO=33
    FALSO=34
    ID=35
    NUMERO=36
    CADENA=37
    COMENTARIO=38
    ESPACIO=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ArcanumParser.EOF, 0)

        def hechizo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArcanumParser.HechizoContext)
            else:
                return self.getTypedRuleContext(ArcanumParser.HechizoContext,i)


        def getRuleIndex(self):
            return ArcanumParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = ArcanumParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.hechizo()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ArcanumParser.FORJAR or _la==ArcanumParser.ID):
                    break

            self.state = 35
            self.match(ArcanumParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HechizoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(ArcanumParser.AsignacionContext,0)


        def instruccionForjar(self):
            return self.getTypedRuleContext(ArcanumParser.InstruccionForjarContext,0)


        def getRuleIndex(self):
            return ArcanumParser.RULE_hechizo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHechizo" ):
                listener.enterHechizo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHechizo" ):
                listener.exitHechizo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHechizo" ):
                return visitor.visitHechizo(self)
            else:
                return visitor.visitChildren(self)




    def hechizo(self):

        localctx = ArcanumParser.HechizoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_hechizo)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ArcanumParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.asignacion()
                pass
            elif token in [ArcanumParser.FORJAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.instruccionForjar()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ArcanumParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(ArcanumParser.ExpresionContext,0)


        def getRuleIndex(self):
            return ArcanumParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = ArcanumParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(ArcanumParser.ID)
            self.state = 42
            self.match(ArcanumParser.T__0)
            self.state = 43
            self.expresion()
            self.state = 44
            self.match(ArcanumParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invocarExpr(self):
            return self.getTypedRuleContext(ArcanumParser.InvocarExprContext,0)


        def recolectarExpr(self):
            return self.getTypedRuleContext(ArcanumParser.RecolectarExprContext,0)


        def purificarExpr(self):
            return self.getTypedRuleContext(ArcanumParser.PurificarExprContext,0)


        def expresionAritmetica(self):
            return self.getTypedRuleContext(ArcanumParser.ExpresionAritmeticaContext,0)


        def getRuleIndex(self):
            return ArcanumParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion" ):
                return visitor.visitExpresion(self)
            else:
                return visitor.visitChildren(self)




    def expresion(self):

        localctx = ArcanumParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expresion)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ArcanumParser.INVOCAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.invocarExpr()
                pass
            elif token in [ArcanumParser.RECOLECTAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.recolectarExpr()
                pass
            elif token in [ArcanumParser.PURIFICAR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.purificarExpr()
                pass
            elif token in [ArcanumParser.T__5, ArcanumParser.VERDADERO, ArcanumParser.FALSO, ArcanumParser.ID, ArcanumParser.NUMERO, ArcanumParser.CADENA]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.expresionAritmetica(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InvocarExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INVOCAR(self):
            return self.getToken(ArcanumParser.INVOCAR, 0)

        def DESDE(self):
            return self.getToken(ArcanumParser.DESDE, 0)

        def CADENA(self):
            return self.getToken(ArcanumParser.CADENA, 0)

        def getRuleIndex(self):
            return ArcanumParser.RULE_invocarExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvocarExpr" ):
                listener.enterInvocarExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvocarExpr" ):
                listener.exitInvocarExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvocarExpr" ):
                return visitor.visitInvocarExpr(self)
            else:
                return visitor.visitChildren(self)




    def invocarExpr(self):

        localctx = ArcanumParser.InvocarExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_invocarExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(ArcanumParser.INVOCAR)
            self.state = 53
            self.match(ArcanumParser.DESDE)
            self.state = 54
            self.match(ArcanumParser.CADENA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RecolectarExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RECOLECTAR(self):
            return self.getToken(ArcanumParser.RECOLECTAR, 0)

        def listaIds(self):
            return self.getTypedRuleContext(ArcanumParser.ListaIdsContext,0)


        def DE(self):
            return self.getToken(ArcanumParser.DE, 0)

        def ID(self):
            return self.getToken(ArcanumParser.ID, 0)

        def getRuleIndex(self):
            return ArcanumParser.RULE_recolectarExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecolectarExpr" ):
                listener.enterRecolectarExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecolectarExpr" ):
                listener.exitRecolectarExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecolectarExpr" ):
                return visitor.visitRecolectarExpr(self)
            else:
                return visitor.visitChildren(self)




    def recolectarExpr(self):

        localctx = ArcanumParser.RecolectarExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_recolectarExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(ArcanumParser.RECOLECTAR)
            self.state = 57
            self.match(ArcanumParser.T__2)
            self.state = 58
            self.listaIds()
            self.state = 59
            self.match(ArcanumParser.T__3)
            self.state = 60
            self.match(ArcanumParser.DE)
            self.state = 61
            self.match(ArcanumParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PurificarExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PURIFICAR(self):
            return self.getToken(ArcanumParser.PURIFICAR, 0)

        def ID(self):
            return self.getToken(ArcanumParser.ID, 0)

        def DONDE(self):
            return self.getToken(ArcanumParser.DONDE, 0)

        def condicion(self):
            return self.getTypedRuleContext(ArcanumParser.CondicionContext,0)


        def getRuleIndex(self):
            return ArcanumParser.RULE_purificarExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPurificarExpr" ):
                listener.enterPurificarExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPurificarExpr" ):
                listener.exitPurificarExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPurificarExpr" ):
                return visitor.visitPurificarExpr(self)
            else:
                return visitor.visitChildren(self)




    def purificarExpr(self):

        localctx = ArcanumParser.PurificarExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_purificarExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(ArcanumParser.PURIFICAR)
            self.state = 64
            self.match(ArcanumParser.ID)
            self.state = 65
            self.match(ArcanumParser.DONDE)
            self.state = 66
            self.condicion(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListaIdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ArcanumParser.ID)
            else:
                return self.getToken(ArcanumParser.ID, i)

        def getRuleIndex(self):
            return ArcanumParser.RULE_listaIds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaIds" ):
                listener.enterListaIds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaIds" ):
                listener.exitListaIds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaIds" ):
                return visitor.visitListaIds(self)
            else:
                return visitor.visitChildren(self)




    def listaIds(self):

        localctx = ArcanumParser.ListaIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listaIds)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ArcanumParser.ID)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArcanumParser.T__4:
                self.state = 69
                self.match(ArcanumParser.T__4)
                self.state = 70
                self.match(ArcanumParser.ID)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstruccionForjarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FORJAR(self):
            return self.getToken(ArcanumParser.FORJAR, 0)

        def ARTEFACTO(self):
            return self.getToken(ArcanumParser.ARTEFACTO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ArcanumParser.ID)
            else:
                return self.getToken(ArcanumParser.ID, i)

        def DESDE(self):
            return self.getToken(ArcanumParser.DESDE, 0)

        def CON(self):
            return self.getToken(ArcanumParser.CON, 0)

        def listaParametros(self):
            return self.getTypedRuleContext(ArcanumParser.ListaParametrosContext,0)


        def getRuleIndex(self):
            return ArcanumParser.RULE_instruccionForjar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccionForjar" ):
                listener.enterInstruccionForjar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccionForjar" ):
                listener.exitInstruccionForjar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionForjar" ):
                return visitor.visitInstruccionForjar(self)
            else:
                return visitor.visitChildren(self)




    def instruccionForjar(self):

        localctx = ArcanumParser.InstruccionForjarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_instruccionForjar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(ArcanumParser.FORJAR)
            self.state = 77
            self.match(ArcanumParser.ARTEFACTO)
            self.state = 78
            self.match(ArcanumParser.ID)
            self.state = 79
            self.match(ArcanumParser.DESDE)
            self.state = 80
            self.match(ArcanumParser.ID)
            self.state = 81
            self.match(ArcanumParser.CON)
            self.state = 82
            self.listaParametros()
            self.state = 83
            self.match(ArcanumParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListaParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArcanumParser.ParametroContext)
            else:
                return self.getTypedRuleContext(ArcanumParser.ParametroContext,i)


        def getRuleIndex(self):
            return ArcanumParser.RULE_listaParametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaParametros" ):
                listener.enterListaParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaParametros" ):
                listener.exitListaParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaParametros" ):
                return visitor.visitListaParametros(self)
            else:
                return visitor.visitChildren(self)




    def listaParametros(self):

        localctx = ArcanumParser.ListaParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listaParametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.parametro()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArcanumParser.T__4:
                self.state = 86
                self.match(ArcanumParser.T__4)
                self.state = 87
                self.parametro()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EJE_X(self):
            return self.getToken(ArcanumParser.EJE_X, 0)

        def ID(self):
            return self.getToken(ArcanumParser.ID, 0)

        def EJE_Y(self):
            return self.getToken(ArcanumParser.EJE_Y, 0)

        def TITULO(self):
            return self.getToken(ArcanumParser.TITULO, 0)

        def CADENA(self):
            return self.getToken(ArcanumParser.CADENA, 0)

        def getRuleIndex(self):
            return ArcanumParser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = ArcanumParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parametro)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ArcanumParser.EJE_X]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(ArcanumParser.EJE_X)
                self.state = 94
                self.match(ArcanumParser.ID)
                pass
            elif token in [ArcanumParser.EJE_Y]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(ArcanumParser.EJE_Y)
                self.state = 96
                self.match(ArcanumParser.ID)
                pass
            elif token in [ArcanumParser.TITULO]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.match(ArcanumParser.TITULO)
                self.state = 98
                self.match(ArcanumParser.CADENA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ArcanumParser.RULE_condicion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class CondicionParentesisContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArcanumParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicion(self):
            return self.getTypedRuleContext(ArcanumParser.CondicionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionParentesis" ):
                listener.enterCondicionParentesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionParentesis" ):
                listener.exitCondicionParentesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicionParentesis" ):
                return visitor.visitCondicionParentesis(self)
            else:
                return visitor.visitChildren(self)


    class CondicionComparacionContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArcanumParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def comparacion(self):
            return self.getTypedRuleContext(ArcanumParser.ComparacionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionComparacion" ):
                listener.enterCondicionComparacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionComparacion" ):
                listener.exitCondicionComparacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicionComparacion" ):
                return visitor.visitCondicionComparacion(self)
            else:
                return visitor.visitChildren(self)


    class CondicionOContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArcanumParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArcanumParser.CondicionContext)
            else:
                return self.getTypedRuleContext(ArcanumParser.CondicionContext,i)

        def O(self):
            return self.getToken(ArcanumParser.O, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionO" ):
                listener.enterCondicionO(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionO" ):
                listener.exitCondicionO(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicionO" ):
                return visitor.visitCondicionO(self)
            else:
                return visitor.visitChildren(self)


    class CondicionYContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArcanumParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArcanumParser.CondicionContext)
            else:
                return self.getTypedRuleContext(ArcanumParser.CondicionContext,i)

        def Y(self):
            return self.getToken(ArcanumParser.Y, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionY" ):
                listener.enterCondicionY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionY" ):
                listener.exitCondicionY(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicionY" ):
                return visitor.visitCondicionY(self)
            else:
                return visitor.visitChildren(self)


    class CondicionNoContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArcanumParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)
